--- a/SU24_GeoMapper.ipynb
+++ b/SU24_GeoMapper.ipynb
@@ -1,6 +1,17 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "ENG-573 Capstone - GPS Localization via Street Signs\n",
+        "\n",
+        "Prasanna Chandrasekar"
+      ],
+      "metadata": {
+        "id": "yE3WUXeOsFc-"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install google-cloud-vision\n",
